# WangLandau

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
data/: Brain.init
dev/: CNN.cpp  FNNMPI.cpp  RNN.cpp  tmp
inc/: FFNN.hpp  FNN.hpp  ML.hpp  WL.hpp  compiler.hpp  constants.hpp  logic.hpp  main.hpp  mathematics.hpp  neuron.hpp  physics.hpp  utils.hpp
lib/: FFNN.cpp  FNN.cpp
review/: FNN.cpp  Transformer.cpp
src/CXX/: main.cpp  neuron.cpp  utils.cpp
src/Python/: ML.py  Supervised.py  WL.py  utils.py
src/Python/Supervised/: AutoEncoder.py  CNN.py  FNN.py  MLP.py  RNN.py  Transformer.py
test/CXX/: test_WL.cpp  test_neuron.cpp  test_utils.cpp
test/Python/: test_ML.py  test_utils.py
test/data/FFNN/: model.inp
test/data/FNN/: model.inp
test/data/Neuron/: FNN.init
